--- a/nextgisweb/resource/nodepkg/home-page/Content.less
+++ b/nextgisweb/resource/nodepkg/home-page/Content.less
@@ -22,10 +22,6 @@ input {
 		background-color: #fff;
 	}
 
-	.form-padding {
-		padding: 16px;
-	}
-
 	.control-button {
 		position: absolute;
 		left: 0;
@@ -505,12 +501,19 @@ textarea::-webkit-input-placeholder {
 	}
 }
 
-.item-upload {
-	width: 100%;
-	display: flex;
-	justify-content: space-between;
 
-	.title-file {
+.upload-footer {
+	display: inline-flex;
+}
+
+.upload-header {
+	display: inline-flex;
+}
+
+.file-list {
+	font-weight: 500;
+
+	.file-name {
 		width: 100%;
 		display: inline-grid;
 
@@ -520,18 +523,16 @@ textarea::-webkit-input-placeholder {
 			white-space: nowrap;
 		}
 	}
-}
 
-.upload-footer {
-	display: flex;
-	justify-content: space-between;
-}
+	.file-size {
 
+		color: var(--icon-color);
+		min-width: 125px;
+		display: flex;
+		justify-content: center;
+	}
 
-.upload-header {
-	float: left;
-	margin: 0;
-	display: flex;
-	width: 100%;
-	justify-content: space-between;
+	.icon-file {
+		flex: 0 0 auto;
+	}
 }
