partial scroll style update ngw, settings formatted fields component feature layer

--- a/nextgisweb/feature_layer/nodepkg/feature-grid/FeatureTable.less
+++ b/nextgisweb/feature_layer/nodepkg/feature-grid/FeatureTable.less
@@ -76,7 +76,8 @@
         height: 0px;
         overflow-x: auto;
         overflow-y: scroll;
-
+        scrollbar-width: thin;
+        
         .tbody {
             position: relative;
             width: 100%;
