--- a/nextgisweb/webmap/nodepkg/display/component/NavigationMenu.less
+++ b/nextgisweb/webmap/nodepkg/display/component/NavigationMenu.less
@@ -6,6 +6,7 @@
     height: 100%;
     overflow: auto;
     color: var(--on-primary-text);
+    scrollbar-width: thin;
 
     .ngw-webmap-display-navigation-menu-item {
         cursor: pointer;
