--- a/nextgisweb/feature_layer/nodepkg/fields-widget/FormattedDecimalForm.less
+++ b/nextgisweb/feature_layer/nodepkg/fields-widget/FormattedDecimalForm.less
@@ -1,11 +1,3 @@
-.format-row {
-    display: flex;
-    flex-direction: column;
-
-    .format-item {
-        height: 32px;
-        display: flex;
-        justify-content: space-between;
-        margin: 0px 0px 1em 0px;
-    }
+.format-component {
+    padding: 1em;
 }
