--- a/nextgisweb/webmap/nodepkg/identify-module/IdentifyModule.less
+++ b/nextgisweb/webmap/nodepkg/identify-module/IdentifyModule.less
@@ -288,6 +288,7 @@
             width: 100%;
             overflow: overlay;
             height: 100%;
+            scrollbar-width: thin;
 
             .content-move {
                 height: 100%;
