--- a/nextgisweb/webmap/nodepkg/panel/component/PanelContainer.less
+++ b/nextgisweb/webmap/nodepkg/panel/component/PanelContainer.less
@@ -31,6 +31,7 @@
         gap: 8px;
         min-height: 0;
         overflow-y: auto;
+        scrollbar-width: thin;
 
         .ngw-webmap-panel-section + .ngw-webmap-panel-section {
             border-top: 1px solid var(--theme-color-border-secondary);
