formatted fields component test

--- a/nextgisweb/feature_layer/nodepkg/fields-widget/FieldsWidget.less
+++ b/nextgisweb/feature_layer/nodepkg/fields-widget/FieldsWidget.less
@@ -11,9 +11,18 @@
 }
 
 .formatted-icon {
-    color: var(--danger);
-    border: 1px solid var(--danger);
-    border-radius: 50%;
+    color: var(--primary);
+    display: inline;
+    font-size: large;
+}
+
+.formatted-tag {
     font-size: 14px;
-    display: flex;
+    height: 32px;
+    padding: 0px 15px;
+    outline: none;
+    position: relative;
+    display: inline-flex;
+    align-items: center;
+    border: 1px solid var(--input-border-color);
 }
