test formatted fields component

--- a/nextgisweb/feature_layer/nodepkg/fields-widget/FieldsWidget.less
+++ b/nextgisweb/feature_layer/nodepkg/fields-widget/FieldsWidget.less
@@ -11,9 +11,8 @@
 }
 
 .formatted-icon {
-    color: var(--primary);
-    display: inline;
-    font-size: large;
+    color: var(--danger);
+    font-weight: 500;
 }
 
 .formatted-tag {
