test field view component, fields widget

--- a/nextgisweb/feature_layer/nodepkg/fields-widget/FieldsWidget.less
+++ b/nextgisweb/feature_layer/nodepkg/fields-widget/FieldsWidget.less
@@ -10,9 +10,10 @@
     }
 }
 
-.formatted-icon {
-    color: var(--danger);
-    font-weight: 500;
+.formatted-value,
+.lookup-value {
+    color: var(--text-secondary);
+    margin: 0 0 0 16px;
 }
 
 .formatted-tag {
