formatted value view for table

--- a/nextgisweb/feature_layer/nodepkg/feature-grid/FeatureTable.less
+++ b/nextgisweb/feature_layer/nodepkg/feature-grid/FeatureTable.less
@@ -92,7 +92,7 @@
                 .td {
                     flex: 0 0 auto;
                     overflow: clip;
-                    text-overflow: ellipsis;
+                    overflow-wrap: break-word;
 
                     &.last-changed {
                         text-wrap: nowrap;
