--- a/nextgisweb/feature_layer/nodepkg/feature-grid/FeatureTable.less
+++ b/nextgisweb/feature_layer/nodepkg/feature-grid/FeatureTable.less
@@ -77,7 +77,7 @@
         overflow-x: auto;
         overflow-y: scroll;
         scrollbar-width: thin;
-        
+
         .tbody {
             position: relative;
             width: 100%;
@@ -91,8 +91,9 @@
 
                 .td {
                     flex: 0 0 auto;
-                    overflow: clip;
-                    overflow-wrap: break-word;
+                    word-break: break-word;
+                    display: flex;
+                    align-items: center;
 
                     &.last-changed {
                         text-wrap: nowrap;
