--- a/nextgisweb/resource/nodepkg/resource-section/breadcrumb/BreadcrumbComponent.less
+++ b/nextgisweb/resource/nodepkg/resource-section/breadcrumb/BreadcrumbComponent.less
@@ -8,26 +8,34 @@
     }
 
     .item-bc {
+        display: inline-flex;
+        align-items: center;
+
         .menu-dropdown {
-            padding: 0 3px;
+            padding: 3px;
             margin: 0 0 0 5px;
             color: var(--primary);
             cursor: pointer;
             border-radius: 3px;
+            line-height: 1;
 
             &:hover {
                 background-color: #00000005;
             }
         }
+
+        .icon-title {
+            padding: 0 5px 0 0;
+            line-height: 1;
+            font-size: 14px;
+            cursor: pointer;
+        }
+
+        a {
+            text-decoration: none;
+        }
     }
 
-    .icon-title {
-        padding: 0 5px 0 0;
-    }
-
-    a {
-        text-decoration: none;
-    }
 
     .separator:before {
         content: "●";
