--- a/nextgisweb/webmap/nodepkg/display/component/NavigationMenu.less
+++ b/nextgisweb/webmap/nodepkg/display/component/NavigationMenu.less
@@ -7,6 +7,9 @@
     overflow: auto;
     color: var(--on-primary-text);
     scrollbar-width: thin;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
 
     .ngw-webmap-display-navigation-menu-item {
         cursor: pointer;
@@ -34,20 +37,18 @@
 }
 
 .infoblock {
-    position: absolute;
     bottom: 0px;
     display: flex;
-    height: 80px;
-    width: 40px;
+
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
 
     .iconLinks {
         color: #87b4c7;
-        font-size: 20px;
-        width: 20px;
-        height: 20px;
+        font-size: 24px;
+        height: 40px;
+        width: 40px;
     }
 
     svg.icon {
