change tablenogeom resource

--- a/nextgisweb/tablenogeom/nodepkg/diagnostics-widget/DiagnosticsWidget.less
+++ b/nextgisweb/tablenogeom/nodepkg/diagnostics-widget/DiagnosticsWidget.less
@@ -22,7 +22,7 @@
                 padding: 0.1rem 0.5rem;
                 width: var(--status-length);
                 color: white;
-                font-weight: bolder;
+                font-weight: bold;
                 text-align: center;
                 text-transform: uppercase;
             }
