--- a/nextgisweb/gui/nodepkg/antd/table/index.less
+++ b/nextgisweb/gui/nodepkg/antd/table/index.less
@@ -14,6 +14,7 @@
                 position: absolute;
                 inset: 0;
                 overflow-y: auto;
+                scrollbar-width: thin;
 
                 > .ant-table-container > .ant-table-content > table {
                     > thead {
