--- a/nextgisweb/static/css/layout.less
+++ b/nextgisweb/static/css/layout.less
@@ -230,6 +230,11 @@ a[class*=" icon-"]:hover:before {
         font-weight: var(--ngw-head-font-weight);
         font-size: 16px;
         font-family: var(--ngw-head-font-family);
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
+        display: -webkit-box;
+        overflow: hidden;
+        overflow-wrap: anywhere;
     }
 
     >div.container {
