--- a/nextgisweb/resource/nodepkg/home-page/component/Header.less
+++ b/nextgisweb/resource/nodepkg/home-page/component/Header.less
@@ -1,3 +1,71 @@
+body {
+	overflow-x: hidden;
+}
+
+.rnd-style {
+	border-radius: 3px;
+	box-shadow: 0 3px 7px rgba(2, 34, 60, 0.16);
+	background: #fff;
+	z-index: 1000;
+	padding: 0;
+	margin: 0;
+	overflow: hidden;
+
+	.headerStyle {
+		display: flex;
+		background-color: #ffffff;
+		height: 40px;
+		box-sizing: border-box;
+		padding: 5px 5px 5px 16px;
+		align-items: center;
+		font-weight: 500;
+		justify-content: space-between;
+	}
+
+	.contentStyle {
+		text-align: center;
+		color: rgb(0, 0, 0);
+		height: 100%;
+		overflow-y: auto;
+		scrollbar-width: thin;
+		box-sizing: border-box;
+		background-color: #fff;
+		cursor: auto;
+	}
+
+	.content {
+		width: 100%;
+		padding: 16px;
+	}
+
+	.add-url {
+		display: flex;
+		justify-content: flex-end;
+		margin-bottom: 5px;
+	}
+
+	.item-url {
+		flex-wrap: wrap;
+		display: flex;
+		justify-content: space-between;
+	}
+
+	.footerStyle {
+		cursor: auto;
+		text-align: end;
+		color: rgb(0, 0, 0);
+		height: auto;
+		box-sizing: border-box;
+		padding: 16px;
+		background: #ffffff;
+	}
+
+	.flex-end-space {
+		display: flex;
+		justify-content: space-around;
+	}
+}
+
 .header-home-page {
 	padding: 0 10% 0 10%;
 
@@ -109,22 +177,6 @@
 	.ant-menu::before {
 		background-color: #212529;
 		font-weight: 500;
-	}
-}
-
-.header-info-edit {
-	margin-bottom: 5px;
-	border-radius: 3px;
-	display: flex;
-	align-items: center;
-	justify-content: flex-end;
-	font-weight: var(--ngw-text-font-weight-normal);
-	z-index: 1000;
-	position: relative;
-
-	.ant-input-outlined {
-		box-shadow: inset 0 1px 2px 0px var(--divider-color);
-		border-radius: 3px;
 	}
 }
 
