test header setting react rnd popup size

--- a/nextgisweb/resource/nodepkg/home-page/component/Header.less
+++ b/nextgisweb/resource/nodepkg/home-page/component/Header.less
@@ -24,13 +24,16 @@ body {
 
 	.contentStyle {
 		text-align: center;
-		color: rgb(0, 0, 0);
-		height: 100%;
+		color: #000000;
+		height: calc(100% - 104px);
+		left: 0;
+		right: 0;
 		overflow-y: auto;
 		scrollbar-width: thin;
 		box-sizing: border-box;
 		background-color: #fff;
 		cursor: auto;
+		position: absolute;
 	}
 
 	.content {
@@ -52,12 +55,11 @@ body {
 
 	.footerStyle {
 		cursor: auto;
-		text-align: end;
-		color: rgb(0, 0, 0);
-		height: auto;
-		box-sizing: border-box;
 		padding: 16px;
 		background: #ffffff;
+		bottom: 0;
+		position: absolute;
+		right: 0;
 	}
 
 	.flex-end-space {
