test react rnd header setting

--- a/nextgisweb/resource/nodepkg/home-page/Content.less
+++ b/nextgisweb/resource/nodepkg/home-page/Content.less
@@ -507,4 +507,6 @@ textarea::-webkit-input-placeholder {
 
 .upload-header {
 	display: flex;
+	flex-direction: row-reverse;
+    justify-content: space-between;
 }
