--- a/nextgisweb/resource/nodepkg/home-page/component/Header.less
+++ b/nextgisweb/resource/nodepkg/home-page/component/Header.less
@@ -10,16 +10,21 @@ body {
 	padding: 0;
 	margin: 0;
 	overflow: hidden;
+	min-height: 254px;
+	min-width: 275px;
+	letter-spacing: 0.05rem;
 
 	.headerStyle {
 		display: flex;
-		background-color: #ffffff;
 		height: 40px;
 		box-sizing: border-box;
 		padding: 5px 5px 5px 16px;
 		align-items: center;
-		font-weight: 500;
+		font-weight: 600;
+		font-size: 16px;
 		justify-content: space-between;
+		border-bottom: 1px solid var(--divider-color);
+		background-color: #e9e9e91a;
 	}
 
 	.contentStyle {
@@ -34,6 +39,7 @@ body {
 		background-color: #fff;
 		cursor: auto;
 		position: absolute;
+		min-height: 150px;
 	}
 
 	.content {
@@ -60,6 +66,8 @@ body {
 		bottom: 0;
 		position: absolute;
 		right: 0;
+		left: 0;
+		text-align: end;
 	}
 
 	.flex-end-space {
@@ -253,3 +261,9 @@ body {
 		color: #afb4fd !important;
 	}
 }
+
+// -------------------------------
+
+div:has(> .upload-header) { width: 100%; }
+
+div:has(> .disable-scroll) { overflow: hidden; position: fixed; width: 100%; height: 100%; }
