--- a/nextgisweb/resource/nodepkg/home-page/Content.less
+++ b/nextgisweb/resource/nodepkg/home-page/Content.less
@@ -500,13 +500,24 @@ textarea::-webkit-input-placeholder {
 }
 
 
+.upload-header,
 .upload-footer {
 	display: flex;
-	flex-wrap: wrap;
+	flex-direction: row-reverse;
+	justify-content: space-between;
 }
 
-.upload-header {
-	display: flex;
-	flex-direction: row-reverse;
-    justify-content: space-between;
+div:has(> .upload-header) {
+	width: 100%;
+}
+
+div:has(> .upload-footer) {
+	width: 100%;
+}
+
+div:has(> .disable-scroll) {
+	overflow: hidden;
+	position: fixed;
+	width: 100%;
+	height: 100%;
 }
