style modal component home page

--- a/nextgisweb/resource/nodepkg/home-page/Content.less
+++ b/nextgisweb/resource/nodepkg/home-page/Content.less
@@ -497,13 +497,6 @@ div:has(> .upload-footer) {
 	width: 100%;
 }
 
-div:has(> .disable-scroll) {
-	overflow: hidden;
-	position: fixed;
-	width: 100%;
-	height: 100%;
-}
-
 // ---modal---
 
 .modal-component {
@@ -534,4 +527,9 @@ div:has(> .disable-scroll) {
 
 .form-component {
 	height: 100%;
+	width: 100%;
+}
+
+.content {
+	width: 100%;
 }
