--- a/nextgisweb/webmap/nodepkg/layers-tree/LayersTree.less
+++ b/nextgisweb/webmap/nodepkg/layers-tree/LayersTree.less
@@ -1,10 +1,51 @@
 .ngw-webmap-layers-tree.ant-tree {
+    &.ant-tree-show-line {
+        --ngw-webmap-layers-tree-indent: 20px;
+        --ngw-webmap-layers-tree-switcher: 24px;
+    }
+
     .ant-tree-treenode {
         padding: 0;
 
-        &.ant-tree-treenode-selected {
-            background-color: #e6f0f800;
+        > .ant-tree-indent {
+            > .ant-tree-indent-unit {
+                width: var(--ngw-webmap-layers-tree-indent);
+
+                &::before {
+                    inset-inline-end: 8px;
+                }
+            }
         }
+
+        > .ant-tree-switcher {
+            margin-inline-end: 0;
+            width: var(--ngw-webmap-layers-tree-switcher, 6px);
+
+            > .ant-tree-switcher-leaf-line {
+                &::after {
+                    width: 6px;
+                    height: 14px;
+                }
+            }
+        }
+
+        &.ant-tree-treenode-leaf-last {
+            > .ant-tree-switcher {
+                > .ant-tree-switcher-leaf-line {
+                    &::before {
+                        height: 14px !important;
+                    }
+                }
+            }
+        }
+
+        &.ant-tree-treenode-selected {
+            background-color: transparent;
+        }
+    }
+
+    .ant-tree-switcher-line-icon {
+        vertical-align: -0.3em;
     }
 
     .ant-tree-checkbox {
