--- a/nextgisweb/resource/nodepkg/home-page/Content.less
+++ b/nextgisweb/resource/nodepkg/home-page/Content.less
@@ -107,7 +107,7 @@ input {
 			display: flex;
 			flex-direction: column;
 			padding: 0;
-			height: calc(100%);
+			min-height: 453px;
 			padding: 24px 0 0 0;
 			background: #e9e9e91a;
 			min-width: 410px;
