--- a/nextgisweb/resource/nodepkg/home-page/Content.less
+++ b/nextgisweb/resource/nodepkg/home-page/Content.less
@@ -18,10 +18,6 @@ input {
 	grid-template-rows: auto 1fr auto;
 	letter-spacing: .05rem;
 
-	button {
-		background-color: #fff;
-	}
-
 	.control-button {
 		position: absolute;
 		left: 0;
@@ -37,19 +33,13 @@ input {
 	}
 
 	.icon-pensil {
-		width: 24px;
-		height: 24px;
 		color: var(--text-base);
-		background-color: #fff;
 		display: flex;
-		justify-items: center;
-		justify-content: center;
 		align-items: center;
-		flex: 0 0 auto;
-		cursor: pointer;
+		font-size: 18px;
+		background-color: #fff;
 		margin: 5px 0 0 5px;
 		z-index: 1000;
-		border-color: var(--icon-color);
 	}
 
 	.icon-edit-control {
@@ -364,7 +354,7 @@ input {
 										display: flex;
 										flex: 1;
 										flex-direction: column;
-										justify-content: space-around;
+										justify-content: space-between;
 
 										.ant-card-meta-title {
 											display: flex;
@@ -387,8 +377,8 @@ input {
 											justify-content: space-between;
 
 											.icon-open-map {
-												margin: 0 0 0 10px;
-												color: var(--primary);
+												margin: 0;
+												color: var(--text-base);
 												padding: 0;
 												border-radius: 2px;
 												line-height: 1;
@@ -405,7 +395,7 @@ input {
 												cursor: pointer;
 
 												svg.icon {
-													fill: var(--primary);
+													fill: var(--text-base);
 												}
 
 												svg.icon:hover {
@@ -413,12 +403,17 @@ input {
 												}
 											}
 
-											a {
-												color: var(--primary);
+											a,
+											button {
+												color: var(--text-base);
 												display: flex;
 												align-items: center;
 												font-size: 24px;
-												padding: 0;
+												padding: 0 5px;
+
+												&:hover {
+													background-color: transparent;
+												}
 											}
 
 											.open-map {
@@ -504,7 +499,7 @@ div:has(> .upload-footer) {
 
 	.modal-title {
 		cursor: move;
-		padding: 5px 32px 5px 16px;
+		padding: 5px 40px 5px 16px;
 		margin-bottom: 16px;
 		background-color: #e9e9e91a;
 		overflow: hidden;
@@ -517,30 +512,39 @@ div:has(> .upload-footer) {
 }
 
 .grid-card-meta-title {
-    margin: 0;
-    padding: 0px 16px;
-    color: var(--primary);
-    font-size: 14px;
-    overflow: hidden;
-    font-weight: 600;
-    white-space: initial;
-    text-overflow: ellipsis;
-    line-height: normal;
-    -webkit-line-clamp: 3;
-    display: -webkit-box;
-    -webkit-box-orient: vertical;
+	margin: 5px 16px;
+	padding: 0;
+	color: #000000;
+	font-weight: 400;
+	font-size: 16px;
+	overflow: hidden;
+	white-space: initial;
+	text-overflow: ellipsis;
+	line-height: 20.7px;
+	text-align: left;
+	letter-spacing: normal;
+	-webkit-line-clamp: 3;
+	display: -webkit-box;
+	-webkit-box-orient: vertical;
 }
 
 .grid-card-meta-title-min {
 	padding: 0;
 	text-align: center;
-	color: var(--primary);
+	color: var(--text-base);
 	line-height: 2;
 }
 
 .title-map {
 	border-radius: 3px;
 	background-color: var(--divider-color);
+}
+
+.button-edit-save {
+	color: var(--text-base);
+	display: flex;
+	align-items: center;
+	font-size: 18px;
 }
 
 // ---form---
