--- a/nextgisweb/resource/nodepkg/home-page/component/Header.less
+++ b/nextgisweb/resource/nodepkg/home-page/component/Header.less
@@ -169,6 +169,7 @@
 		transition: background-color 5000s ease-in-out 0s;
 		box-shadow: inset 0 0 20px 20px #ffffff00;
 	}
+
 }
 
 .account-name {
@@ -184,3 +185,7 @@
 	}
 }
 
+.ant-modal .ant-modal-close {
+	top: 0;
+	inset-inline-end: 0;
+}
