--- a/nextgisweb/static/css/layout.less
+++ b/nextgisweb/static/css/layout.less
@@ -173,7 +173,7 @@ a[class*=" icon-"]:hover:before {
     box-sizing: border-box;
     display: flex;
     gap: 10px;
-    min-height: 40px;
+    height: 40px;
     min-width: 0;
     padding: 0;
     position: relative;
@@ -235,6 +235,7 @@ a[class*=" icon-"]:hover:before {
         display: -webkit-box;
         overflow: hidden;
         overflow-wrap: anywhere;
+        line-height: 1.2;
     }
 
     >div.container {
