--- a/nextgisweb/resource/nodepkg/home-page/Content.less
+++ b/nextgisweb/resource/nodepkg/home-page/Content.less
@@ -355,6 +355,7 @@ input {
 										flex: 1;
 										flex-direction: column;
 										justify-content: space-between;
+										cursor: auto;
 
 										.ant-card-meta-title {
 											display: flex;
@@ -421,6 +422,20 @@ input {
 												text-transform: uppercase;
 												text-decoration: none;
 												font-weight: 500;
+												display: flex;
+												align-items: center;
+
+												svg {
+													margin-right: 5px;
+												}
+
+												&:hover {
+													opacity: .5;
+												}
+
+												span {
+													color: var(--primary);
+												}
 											}
 
 											svg.icon {
