--- a/nextgisweb/resource/nodepkg/home-page/Content.less
+++ b/nextgisweb/resource/nodepkg/home-page/Content.less
@@ -97,7 +97,7 @@ input {
 			display: flex;
 			flex-direction: column;
 			padding: 0;
-			min-height: 453px;
+			min-height: 461px;
 			padding: 24px 0 0 0;
 			background: #e9e9e91a;
 			min-width: 410px;
@@ -364,11 +364,11 @@ input {
 											cursor: text;
 											justify-content: center;
 											width: 100%;
-											bottom: 32px;
+											height: 100%;
 										}
 
 										.ant-card-meta-description {
-											padding: 0 10px 0 10px;
+											padding: 0 10px 10px 10px;
 											display: flex;
 											cursor: text;
 											bottom: 1px;
@@ -425,16 +425,13 @@ input {
 												display: flex;
 												align-items: center;
 
-												svg {
-													margin-right: 5px;
-												}
-
 												&:hover {
 													opacity: .5;
 												}
 
 												span {
 													color: var(--primary);
+													margin-left: 5px;
 												}
 											}
 
