--- a/nextgisweb/resource/nodepkg/home-page/component/Header.less
+++ b/nextgisweb/resource/nodepkg/home-page/component/Header.less
@@ -41,6 +41,8 @@
 					justify-content: flex-end;
 				}
 
+
+
 				.auth-login {
 					vertical-align: middle;
 
@@ -51,7 +53,7 @@
 				}
 
 				.ant-menu-title-content {
-					font-weight: 500;
+					font-weight: 600;
 				}
 			}
 
@@ -173,6 +175,11 @@
 }
 
 .account-name {
+	font-weight: 600;
+	text-transform: uppercase;
+}
+
+.ant-menu-title-content-with-extra {
 	font-weight: 500;
 }
 
