change style home page

--- a/nextgisweb/resource/nodepkg/home-page/component/Footer.less
+++ b/nextgisweb/resource/nodepkg/home-page/component/Footer.less
@@ -127,13 +127,12 @@
 						border-bottom: 1px dotted rgba(200, 200, 200, 0.25);
 
 						.name {
-							padding: 0 16px 0 0;
+							white-space: nowrap;
 						}
 
 						.value {
-							padding: 0 0 0 16px;
 							text-align: right;
-							word-break: break-word;
+							white-space: nowrap;
 						}
 					}
 				}
