change style home page

--- a/nextgisweb/resource/nodepkg/home-page/Content.less
+++ b/nextgisweb/resource/nodepkg/home-page/Content.less
@@ -212,7 +212,7 @@ input {
 									display: inline-flex;
 									align-items: center;
 									box-sizing: border-box;
-									margin: 5px 0;
+									margin: 5px;
 									border-radius: 3px;
 									min-width: 72px;
 
@@ -229,7 +229,6 @@ input {
 										border-radius: 3px;
 										padding: 5px;
 										font-weight: 500;
-										color: var(--primary);
 										user-select: none;
 									}
 								}
