resource picker children added cls type column, change style

--- a/nextgisweb/resource/nodepkg/component/resource-picker/ResourcePickerChildren.less
+++ b/nextgisweb/resource/nodepkg/component/resource-picker/ResourcePickerChildren.less
@@ -6,4 +6,12 @@
         width: 0;
         white-space: nowrap;
     }
+
+    .ant-space-item {
+        overflow: hidden;
+        -webkit-line-clamp: 2;
+        display: -webkit-box;
+        -webkit-box-orient: vertical;
+        min-width: 22px;
+    }
 }
