change style layout

--- a/nextgisweb/static/css/layout.less
+++ b/nextgisweb/static/css/layout.less
@@ -23,7 +23,11 @@ html {
     font-family: var(--ngw-text-font-family);
     scrollbar-width: thin;
 }
-
+input {
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+}
 body {
     margin: 0;
     color: var(--text-base);
