resource picker children added cls display name column

--- a/nextgisweb/resource/nodepkg/component/resource-picker/ResourcePickerChildren.less
+++ b/nextgisweb/resource/nodepkg/component/resource-picker/ResourcePickerChildren.less
@@ -1,5 +1,5 @@
 .ngw-resource-component-resource-picker-children {
-    table > tbody > tr.ant-table-row > td.ant-table-cell.actions {
+    table>tbody>tr.ant-table-row>td.ant-table-cell.actions {
         vertical-align: middle;
         padding: 0;
         padding-inline-end: 12px;
@@ -13,5 +13,13 @@
         display: -webkit-box;
         -webkit-box-orient: vertical;
         min-width: 22px;
+    }
+
+    .displayName {
+        width: 75%;
+    }
+
+    .clsDisplayName {
+        width: 25%;
     }
 }
