--- a/nextgisweb/resource/nodepkg/component/resource-picker/ResourcePickerChildren.less
+++ b/nextgisweb/resource/nodepkg/component/resource-picker/ResourcePickerChildren.less
@@ -7,19 +7,40 @@
         white-space: nowrap;
     }
 
-    .ant-space-item {
-        overflow: hidden;
-        -webkit-line-clamp: 2;
-        display: -webkit-box;
-        -webkit-box-orient: vertical;
-        min-width: 22px;
-    }
+
 
     .displayName {
-        width: 75%;
-    }
+        width: 100%;
 
-    .clsDisplayName {
-        width: 25%;
+        .content {
+            display: flex;
+            align-items: center;
+
+            .icon-cls {
+                padding: 0 12px 0 0;
+            }
+
+            .name {
+                display: flex;
+                width: 100%;
+                align-items: center;
+
+                .value {
+                    width: 75%;
+                    overflow: hidden;
+                    text-overflow: ellipsis;
+                    -webkit-line-clamp: 2;
+                    -webkit-box-orient: vertical;
+                    padding: 0 5px 0px 0;
+                    display: -webkit-inline-box;
+                }
+
+                .cls {
+                    width: 25%;
+                    text-align: center;
+                    color: var(--text-secondary)
+                }
+            }
+        }
     }
 }
