--- a/nextgisweb/resource/nodepkg/home-page/Content.less
+++ b/nextgisweb/resource/nodepkg/home-page/Content.less
@@ -36,10 +36,11 @@ input {
 		color: var(--text-base);
 		display: flex;
 		align-items: center;
-		font-size: 18px;
 		background-color: #fff;
 		margin: 5px 0 0 5px;
 		z-index: 1000;
+		width: 24px;
+		height: 24px;
 	}
 
 	.icon-edit-control {
@@ -507,10 +508,13 @@ div:has(> .upload-footer) {
 		inset-inline-end: 5px;
 	}
 
+	.ant-modal-header {
+		margin-bottom: 0;
+	}
+
 	.modal-title {
 		cursor: move;
 		padding: 5px 40px 5px 16px;
-		margin-bottom: 16px;
 		background-color: #e9e9e91a;
 		overflow: hidden;
 		-webkit-line-clamp: 2;
