change component home page

--- a/nextgisweb/resource/nodepkg/home-page/Content.less
+++ b/nextgisweb/resource/nodepkg/home-page/Content.less
@@ -549,6 +549,12 @@ div:has(> .upload-footer) {
 	display: flex;
 	align-items: center;
 	font-size: 18px;
+	position: relative;
+    top: -32px;
+}
+
+.edit-group-maps,.edit-grid-maps {
+	position: absolute;
 }
 
 // ---form---
