resource section description component change

--- a/nextgisweb/resource/nodepkg/description/DescComponent.less
+++ b/nextgisweb/resource/nodepkg/description/DescComponent.less
@@ -1,3 +1,7 @@
+.ant-image-preview-operations,.ant-image-preview-close {
+	background-color: var(--primary);
+}
+
 .desc-component {
 
 	.ck-content {
