--- a/nextgisweb/resource/nodepkg/resource-section/description/ResourceSectionDescription.less
+++ b/nextgisweb/resource/nodepkg/resource-section/description/ResourceSectionDescription.less
@@ -7,31 +7,32 @@
         }
     }
 
-    .result-title {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        background-color: #fafafa;
-        border-radius: 4px;
-        padding: 5px;
-        border: 1px solid #f0f0f0;
-
-        .title {
-            font-weight: 500;
-            font-size: 18px;
-        }
-
-        button {
-            color: var(--text-secondary);
+    .result-description {
+        .result-title {
             display: flex;
+            justify-content: space-between;
             align-items: center;
-            font-size: 24px;
-            width: 32px;
-            height: 32px;
+            background-color: #fafafa;
+            border-radius: 4px;
+            padding: 5px;
+            border: 1px solid #f0f0f0;
 
-            &:hover {
-                color: var(--primary);
-                background-color: #00000007;
+            .title {
+                font-weight: 500;
+                font-size: 18px;
+            }
+
+            button {
+                color: var(--text-secondary);
+                display: flex;
+                align-items: center;
+                font-size: 24px;
+                width: 24px;
+                height: 24px;
+
+                &:hover {
+                    color: var(--primary);
+                }
             }
         }
     }
