--- a/nextgisweb/resource/nodepkg/home-page/Content.less
+++ b/nextgisweb/resource/nodepkg/home-page/Content.less
@@ -33,7 +33,7 @@ input {
 	}
 
 	.icon-pensil {
-		color: var(--text-secondary);
+		color: var(--text-base);
 		display: flex;
 		align-items: center;
 		background-color: #fff;
@@ -41,11 +41,7 @@ input {
 		z-index: 1000;
 		width: 32px;
 		height: 32px;
-		font-size: 16px;
-
-		&:hover {
-			color: var(--primary) !important;
-		}
+		font-size: 18px;
 	}
 
 	.icon-edit-control {
@@ -422,11 +418,11 @@ input {
 														font-size: 24px;
 														margin: 0px 10px;
 														padding: 0;
-														color: var(--text-secondary);
 
 														span {
 															display: flex;
 															align-items: center;
+															color: var(--primary);
 															text-transform: uppercase;
 															text-decoration: none;
 															font-weight: 500;
@@ -531,7 +527,7 @@ div:has(> .upload-footer) {
 }
 
 .grid-card-meta-title {
-	font-weight: 500;
+	font-weight: 600;
 	font-size: 16px;
 	overflow: hidden;
 	white-space: initial;
@@ -550,14 +546,12 @@ div:has(> .upload-footer) {
 }
 
 .button-edit-save {
-	color: var(--text-secondary);
+	color: var(--text-base);
 	display: flex;
 	align-items: center;
-	font-size: 16px;
+	font-size: 18px;
 	position: relative;
 	top: -32px;
-	width: 32px !important;
-	height: 32px !important;
 
 	&:hover {
 		color: var(--primary) !important;
