--- a/nextgisweb/resource/nodepkg/home-page/component/Footer.less
+++ b/nextgisweb/resource/nodepkg/home-page/component/Footer.less
@@ -93,7 +93,7 @@
 				margin: 5px;
 			}
 
-			.services-url {
+			.service-url {
 				padding: 0 0 0 5px;
 
 				.icon-url {
@@ -101,7 +101,7 @@
 				}
 			}
 
-			.services-list {
+			.service-list {
 				width: 100%;
 				display: flex;
 				flex-direction: column-reverse;
