--- a/nextgisweb/resource/nodepkg/home-page/component/Header.less
+++ b/nextgisweb/resource/nodepkg/home-page/component/Header.less
@@ -26,6 +26,7 @@
 
 				.menu-indicator {
 					font-size: 24px;
+					color: #fff;
 				}
 
 				.ant-menu-horizontal,
@@ -41,13 +42,11 @@
 					justify-content: flex-end;
 				}
 
-
-
 				.auth-login {
 					vertical-align: middle;
 
 					>svg.icon {
-						color: inherit;
+						color: #fff;
 						font-size: 24px;
 					}
 				}
