--- a/nextgisweb/resource/nodepkg/home-page/component/Header.less
+++ b/nextgisweb/resource/nodepkg/home-page/component/Header.less
@@ -181,6 +181,14 @@
 	font-weight: 500;
 }
 
+.ant-menu-item {
+	font-weight: 500;
+
+	svg {
+		padding: 0 8px 0 0;
+	}
+}
+
 .menu-label {
 	text-transform: uppercase;
 	font-weight: 500;
